# approxem8-BE

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  RESULTS_AND_ANALYSIS.md  benchmark.py  comprehensive_test.py  main.py  pyproject.toml  test_materialized.sh
logs/: RESULTS_ANALYSIS.md
scripts/: generate_data.py
src/aqe/: __init__.py  accuracy.py  error.py  main.py  models.py  profiler.py  router.py
src/aqe/strategies/: __init__.py  duckdb_approx.py  duckdb_quantile.py  materialized.py  python_hll.py  stratified.py  tdigest.py
